--- a/Call Agent/package.json
+++ b/Call Agent/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "franc": "^6.2.0",
+    "nodemailer": "^6.10.1",
     "twilio": "^5.9.0"
   },
   "devDependencies": {
